finish_learning_midu

--- a/projects/hello-world/src/App.css
+++ b/projects/hello-world/src/App.css
@@ -1,42 +1,61 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.tw-followCard {
+  font-family: Arial, sans-serif;
+  display: flex;
+  color: #fff;
+  font-size: .8rem;
+  gap: 1rem;
+  justify-content: space-between;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.tw-followCard-header {
+    display: flex;
+    align-items: center;
+    gap: 4px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.tw-followCard-info{
+    display: flex;
+    flex-direction: column;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.tw-followed-infoUserName {
+    opacity: 0.6;
+}   
+
+.tw-followCard-avatar {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
 }
 
-.card {
-  padding: 2em;
+.tw-followCard-button{
+    cursor: pointer;
+    background: #fff;
+    border: none;
+    color: #000;
+    cursor: pointer;
+    padding: 0.2rem 0.8rem;
+    font-size: .8rem;
+    border-radius: 20px;
 }
 
-.read-the-docs {
-  color: #888;
+.tw-followCard-button.is-following {
+    cursor: pointer;
+    background: #fff;
+    border: 1px solid red;
+    color: #000;
+    cursor: pointer;
+    padding: 0.2rem 0.8rem;
+    font-size: .8rem;
+    border-radius: 20px;
+} 
+
+.tw-followCard-button:hover {
+    background-color: #09f;
+    transition: .3s ease background-color;
+}
+
+.tw-followCard-button.is-following:hover {
+    background-color: #ff0000;
+    transition: .3s ease background-color;
 }
